log in connected

--- a/home-page/home.html
+++ b/home-page/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="/home.html/phone.css">
+    <link rel="stylesheet" href="/home-page/phone.css">
     <title>Meal Delivery Services For Offices | Freshly</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
                     <a href="">Help</a>
                 </div>
                 <div class="right v-hidden">
-                    <a href="">Log in</a>
+                    <a href="/login/login.html">Log in</a>
                     <a href="" class="over">Sign Up</a>
                 </div>
                 <div class="burger">
@@ -248,7 +248,7 @@
                     <input type="submit" value="Get Started!" id="get-started">
                     <!-- </div> -->
                 </form>
-                <p>Already have an account? <a href="">Log in.</a></p>
+                <p>Already have an account? <a href="/login/login.html">Log in.</a></p>
                 <p>By continuing, you agree to our <a href="">Terms</a> and <a href="">Privacy Policy,</a> & will
                     receive emails from Freshly.</p>
             </div>
@@ -324,6 +324,6 @@
             </div>
         </div>
     </footer>
-    <script src="/home.html/data.js"></script>
+    <script src="/home-page/data.js"></script>
 
 </html>
