home-page latest

--- a/home-page/home.html
+++ b/home-page/home.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
+    <link rel="shortcut icon"
+        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn1o5IFvpm5Xk6fzi2cwiYT22tzY-UKMz1Dkyj31jj0jih97-7"
+        type="image/x-icon">
     <link rel="stylesheet" href="/home-page/phone.css">
     <title>Meal Delivery Services For Offices | Freshly</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +45,7 @@
                 </div>
                 <div class="right v-hidden">
                     <a href="/login/login.html">Log in</a>
-                    <a href="" class="over">Sign Up</a>
+                    <a href="../signup/signup.html" class="over">Sign Up</a>
                 </div>
                 <div class="burger">
                     <div class="line"></div>
