--- a/home-page/home.html
+++ b/home-page/home.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="right v-hidden">
                     <a href="/login/login.html">Log in</a>
-                    <a href="../signup/signup.html" class="over">Sign Up</a>
+                    <a href="../Sign up/signup.html" class="over">Sign Up</a>
                 </div>
                 <div class="burger">
                     <div class="line"></div>
@@ -71,8 +71,12 @@
                     </div>
                     <div>
                         <label for="code">Zip code</label><br>
-                        <input type="password" name="password" id="code" placeholder="11111" minlength="6">
+                        <input type="text" name="zipcode" id="code" placeholder="11111" minlength="6">
                     </div>
+                    <!-- <div>
+                        <label for="pass">Password</label><br>
+                        <input type="password" name="password" id="pass" placeholder="password" minlength="6">
+                    </div> -->
                     <div>
 
                         <label for="explore-meals"></label>
@@ -205,7 +209,7 @@
 
             </div>
             <p class="light-teal">Shipping and tax added at checkout</p>
-            <button>Sign Up Now</button>
+            <a href="../Sign up/signup.html"><button>Sign Up Now</button></a>
         </div>
     </section>
     <section id="saying">
