--- a/login/login.html
+++ b/login/login.html
@@ -39,7 +39,7 @@
                 <div><a href="">Get $30</a></div>
                 <div><a href="">Help</a></div>
                 <div><a href="">Log in</a></div>
-                <button class="btn" onclick="window.location.href='signup.html'">Sign Up </button>
+                <a href="../Sign up/signup.html"> <button class="btn">Sign Up </button></a>
 
             </div>
         </div>
@@ -54,14 +54,14 @@
 
         <h1>Log In</h1>
         <p>Email</p>
-        <input type="text" placeholder="you2022@gmail.com" class="inp">
+        <input type="text" placeholder="you2022@gmail.com" class="inp email">
         <p>Password</p>
-        <input type="password" placeholder="enter password" class="inp">
+        <input type="password" placeholder="enter password" class="inp pass">
         <p></p>
         <input type="submit" class="submit" value="Log In">
         <div class="forgot">
             <a href="" class="pass">Forgot Password?</a>
-            <p>Don’t have an account?<a href="" class="pass">Get Started</a></p>
+            <p>Don’t have an account?<a href="../Sign up/signup.html" class="pass">Get Started</a></p>
 
         </div>
 
@@ -69,8 +69,9 @@
     <div id="box2">
         <div class="box3">
             <div class="bottompage">
-                <img src="https://assets-global.website-files.com/5d03b4e130118314af624b20/5fc4feea074f5b86a6c62285_freshly-logo-R.svg"
-                    alt="">
+                <a href="../home-page/home.html"><img
+                        src="https://assets-global.website-files.com/5d03b4e130118314af624b20/5fc4feea074f5b86a6c62285_freshly-logo-R.svg"
+                        alt=""></a>
                 <p class="btp">© Freshly Inc.</p>
 
             </div>
@@ -174,16 +175,6 @@
 
 
 </body>
+<script src="/login/log.js"></script>
 
 </html>
-<script>
-    var left = document.querySelector(".left")
-    var right = document.querySelector("#right")
-    var div = document.querySelector("#nav")
-    function hidenNav() {
-        left.classList.toggle("v-hidden")
-        right.classList.toggle("v-hidden")
-        div.classList.toggle("v-hidden")
-        div.classList.toggle("h-nav")
-    }
-</script>
