--- a/home-page/home.html
+++ b/home-page/home.html
@@ -37,7 +37,7 @@
             </div>
             <div id="nav-menu">
                 <div class="middle v-hidden">
-                    <a href="">Plan & Menu</a>
+                    <a href="../plan-menu/plan-menu.html">Plan & Menu</a>
                     <a href="">How it Works</a>
                     <a href="">Gifts</a>
                     <a href="">Reffer a Frined</a>
