--- a/login/login.html
+++ b/login/login.html
@@ -28,7 +28,7 @@
 
 
             <div class="left v-hidden">
-                <div><a href="">Plans & Menu</a> </div>
+                <div><a href="/plan-menu/plan-menu.html">Plans & Menu</a> </div>
                 <div><a href="https://www.freshly.com/why-freshly">About</a></div>
                 <div><a href="">For Business</a></div>
                 <div><a href="">Gifts</a></div>
