--- a/plans/p.html
+++ b/plans/p.html
@@ -28,10 +28,10 @@
             <a href="">Day</a>
             <img src="https://cdn-icons.flaticon.com/png/512/2989/premium/2989988.png?token=exp=1642761846~hmac=9c44fb3a3ba186f415e408eacbd0df49"
                 alt="">
-            <a href="">Melas</a>
+            <a href="">Meals</a>
             <img src="https://cdn-icons.flaticon.com/png/512/2989/premium/2989988.png?token=exp=1642761846~hmac=9c44fb3a3ba186f415e408eacbd0df49"
                 alt="">
-            <a href="">Chekkout</a>
+            <a href="">Checkout</a>
         </div>
 
         <div class="right">
