--- a/home-page/home.html
+++ b/home-page/home.html
@@ -40,7 +40,7 @@
                     <a href="../plan-menu/plan-menu.html">Plan & Menu</a>
                     <a href="">How it Works</a>
                     <a href="">Gifts</a>
-                    <a href="">Reffer a Frined</a>
+                    <a href="">Refer a Friend</a>
                     <a href="">Help</a>
                 </div>
                 <div class="right v-hidden">
