--- a/plan-menu/plan-menu.html
+++ b/plan-menu/plan-menu.html
@@ -38,7 +38,7 @@
                     <a href="">Plan & Menu</a>
                     <a href="">How it Works</a>
                     <a href="">Gifts</a>
-                    <a href="">Reffer a Frined</a>
+                    <a href="">Refer a Friend</a>
                     <a href="">Help</a>
                 </div>
                 <div class="right v-hidden">
