--- a/home-page/home.html
+++ b/home-page/home.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn1o5IFvpm5Xk6fzi2cwiYT22tzY-UKMz1Dkyj31jj0jih97-7"
         type="image/x-icon">
-    <link rel="stylesheet" href="/home-page/phone.css">
     <title>Meal Delivery Services For Offices | Freshly</title>
+    <link rel="stylesheet" href="/home-page/phone.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -22,8 +22,8 @@
     <header>
         <div id="head">
 
-            <a href="home.html"><span>freshly</span></a>
-            <a href="https://fonts.google.com/"><span>freshly</span><span>business</span></a>
+            <a href="home.html"><span>Freshly</span></a>
+            <a href="/freshly business/freshlybusiness.html"><span id="lgreen">Freshly</span><span>business</span></a>
         </div>
     </header>
 
