--- a/plan-menu/plan-menu.html
+++ b/plan-menu/plan-menu.html
@@ -20,8 +20,8 @@
     <header>
         <div id="head">
 
-            <a href="../home-page/home.html"><span>freshly</span></a>
-            <a href="https://fonts.google.com/"><span>freshly</span><span>business</span></a>
+            <a href="../home-page/home.html"><span>Freshly</span></a>
+            <a href="/freshly business/freshlybusiness.html"><span id="lgreen">Freshly</span><span>business</span></a>
         </div>
     </header>
 
