--- a/plans/p.html
+++ b/plans/p.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/629044acfa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <link rel="shortcut icon"
+        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn1o5IFvpm5Xk6fzi2cwiYT22tzY-UKMz1Dkyj31jj0jih97-7"
+        type="image/x-icon">
+    <title>Meal Delivery Services For Offices | Freshly</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -140,7 +143,7 @@
         </div>
         <div class="box3">
             <h4 id="b3h4">Shipping and tax added at checkout </h4>
-            <div id="continue" onclick="window.location.href='addcart.html'">Continue</div>
+            <div id="continue" onclick="window.location.href='/addcart_checkout/checkout.html'">Continue</div>
         </div>
     </div>
 
