--- a/payment/payment.html
+++ b/payment/payment.html
@@ -105,8 +105,8 @@
         // console.log(name, card, cvv, expiry)
 
         if (name != "" && card != "" && cvv != "" && expiry != "") {
-            alert("your payment was successful")
-            window.location.href = "/home-page/home.html"
+            //alert("your payment was successful")
+            window.location.href = "/otp-page/otp.html"
         }
         else {
             alert("enter your correct details")
