--- a/home-page/home.html
+++ b/home-page/home.html
@@ -38,7 +38,7 @@
             <div id="nav-menu">
                 <div class="middle v-hidden">
                     <a href="../plan-menu/plan-menu.html">Plan & Menu</a>
-                    <a href="">How it Works</a>
+                    <a href="#work">How it Works</a>
                     <a href="">Gifts</a>
                     <a href="">Refer a Friend</a>
                     <a href="">Help</a>
@@ -109,18 +109,18 @@
             </div>
             <div>
                 <img src="https://images.milledcdn.com/2021-03-03/tzgSTYlMGQrhlnxg/jY84tyWS-Biz.gif" alt="">
-                <h2>Choose Your Meals</h2>
-                <p>30+ menu of all natural dishes</p>
+                <h2>We Cook & Deliver </h2>
+                <p>Cooked by Chefs and sent fresh</p>
             </div>
             <div>
                 <img src="https://images.milledcdn.com/2021-03-03/tzgSTYlMGQrhlnxg/iNjoQp5opHsa.gif" alt="">
-                <h2>Choose Your Meals</h2>
-                <p>30+ menu of all natural dishes</p>
+                <h2>You Heat Em' Up</h2>
+                <p>Ready to eat in 3 minutes</p>
             </div>
             <div>
                 <img src="https://images.milledcdn.com/2021-03-03/tzgSTYlMGQrhlnxg/wfz96ZIoyIfW.gif" alt="">
-                <h2>Choose Your Meals</h2>
-                <p>30+ menu of all natural dishes</p>
+                <h2>Eat & Repeat</h2>
+                <p>Skip a week or cancel at any time</p>
             </div>
         </div>
 
