--- a/home-page/home.html
+++ b/home-page/home.html
@@ -169,7 +169,7 @@
                     <p>510Cal | Gluten Free | <br> Single-Serve</p>
                 </div>
             </div>
-            <button>View Plan & Menu</button>
+            <button onclick="planmenu()">View Plan & Menu</button>
         </div>
     </section>
     <section id="plan">
