--- a/sample.html
+++ b/sample.html
@@ -10,3 +10,13 @@
     <p>sample</p>
 </body>
 </html>
+<script>
+  
+  var b = 10 
+  function test(){
+      b= 20
+  }
+   test()
+   console.log(scopeOf(b))
+   
+</script>
