netlify link is working now... final version

--- a/otp-page/otp.html
+++ b/otp-page/otp.html
@@ -47,7 +47,7 @@
         if(otp=="1234"){
             alert("Payment Success");
             //go to home page
-            window.location.href = "/home-page/home.html"
+            window.location.href = "../home.html";
         }
         else{
             alert("Wrong OTP");
