--- a/Sign up/signup.html
+++ b/Sign up/signup.html
@@ -24,7 +24,7 @@
 <body>
     <div class="nav">
         <div class="img">
-            <a href="../home-page/home.html"><img
+            <a href="../home.html"><img
                     src="https://assets-global.website-files.com/5d03b4e130118314af624b20/5fc4feea074f5b86a6c62285_freshly-logo-R.svg"
                     alt="image"></a>
         </div>
