--- a/home.html
+++ b/home.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="home-page/home.css">
     <link rel="shortcut icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn1o5IFvpm5Xk6fzi2cwiYT22tzY-UKMz1Dkyj31jj0jih97-7"
         type="image/x-icon">
     <title>Meal Delivery Services For Offices | Freshly</title>
-    <link rel="stylesheet" href="/home-page/phone.css">
+    <link rel="stylesheet" href="home-page/phone.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
         <div id="head">
 
             <a href="home.html"><span>Freshly</span></a>
-            <a href="/freshly business/freshlybusiness.html"><span id="lgreen">Freshly</span><span>business</span></a>
+            <a href="freshly business/freshlybusiness.html"><span id="lgreen">Freshly</span><span>business</span></a>
         </div>
     </header>
 
@@ -331,6 +331,6 @@
             </div>
         </div>
     </footer>
-    <script src="/home-page/data.js"></script>
+    <script src="home-page/data.js"></script>
 
 </html>
