--- a/login/login.html
+++ b/login/login.html
@@ -34,7 +34,7 @@
                 <div><a href="">Gifts</a></div>
             </div>
             <div class="img" onclick="homePage()">
-                <a href="../home-page/home.html"><img
+                <a href="../home.html"><img
                         src="https://assets-global.website-files.com/5d03b4e130118314af624b20/5fc4feea074f5b86a6c62285_freshly-logo-R.svg"
                         alt="image"></a>
             </div>
