--- a/plan-menu/plan-menu.html
+++ b/plan-menu/plan-menu.html
@@ -20,7 +20,7 @@
     <header>
         <div id="head">
 
-            <a href="../home-page/home.html"><span>Freshly</span></a>
+            <a href="../home.html"><span>Freshly</span></a>
             <a href="/freshly business/freshlybusiness.html"><span id="lgreen">Freshly</span><span>business</span></a>
         </div>
     </header>
@@ -28,7 +28,7 @@
     <nav class="h-nav">
         <div>
             <div class="left">
-                <a href="../home-page/home.html"> <img
+                <a href="../home.html"> <img
                         src="https://assets-global.website-files.com/5d03b4e130118314af624b20/5fc4feea074f5b86a6c62285_freshly-logo-R.svg"
                         alt="">
                 </a>
